force-app/main/default/objects/Webinar__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related sales-campaign for the webinar</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Webinars</relationshipLabel>
    <relationshipName>Webinars</relationshipName>
    <type>Lookup</type>
</CustomField>