force-app/main/default/objects/Webinar__c/fields/IsPublic__c.field-meta.xml
<CustomField>
    <fullName>IsPublic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this field becomes available on the public community page</description>
    <label>Is Public</label>
    <type>Checkbox</type>
</CustomField>