force-app/main/default/objects/Webinar__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Public link to join the webinar, sent in a confirmation email after the registrant fills out the registration form</description>
    <label>Link</label>
    <type>Url</type>
</CustomField>