force-app/main/default/objects/Webinar__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>Datetime for the start of the webinar</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>