force-app/main/default/objects/Webinar__c/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <label>Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rudiments</fullName>
            </value>
            <value>
                <fullName>Musicianship</fullName>
            </value>
            <value>
                <fullName>Product Review</fullName>
            </value>
            <value>
                <fullName>Live Demo</fullName>
            </value>
            <value>
                <fullName>Q&amp;A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>