force-app/main/default/objects/Webinar__c/validationRules/require_name.validationRule-meta.xml
<ValidationRule>
    <fullName>require_name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Webinar name is required</errorMessage>
</ValidationRule>