force-app/main/default/objects/Webinar__c/validationRules/validation_info_to_become_public.validationRule-meta.xml
<ValidationRule>
    <fullName>validation_info_to_become_public</fullName>
    <active>true</active>
    <description>Validates that all the required fields are filled in before the webinar can become public.</description>
    <errorConditionFormula>AND(
  IsPublic__c = true,
  OR(
    ISBLANK(Link__c),
    ISBLANK(StartTime__c),
    ISBLANK(Duration__c)
  )
)</errorConditionFormula>
    <errorMessage>You cannot make this webinar public without filling in the following fields: Link, Start Time, Duration (Minutes)</errorMessage>
</ValidationRule>